--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ fastapi==0.115.3
 h11==0.14.0
 idna==3.10
 lz4==4.3.3
+mangum==0.19.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dotenv==1.0.1
 pytz==2024.2
 sniffio==1.3.1
 starlette==0.41.0
